force-app/main/default/objects/Security_Audit_Run__c/Security_Audit_Run__c.object-meta.xml
<CustomObject>
    <description>Stores one Health Cloud security audit run.</description>
    <label>Security Audit Run</label>
    <nameField>
        <displayFormat>SAR-{00000}</displayFormat>
        <label>Security Audit Run Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Security Audit Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>