force-app/main/default/objects/Security_Audit_Run__c/fields/Finding_Count__c.field-meta.xml
<CustomField>
    <fullName>Finding_Count__c</fullName>
    <label>Finding Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>