force-app/main/default/objects/Security_Audit_Run__c/fields/Run_Key__c.field-meta.xml
<CustomField>
    <externalId>true</externalId>
    <fullName>Run_Key__c</fullName>
    <label>Run Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>