force-app/main/default/objects/Security_Audit_Run__c/fields/Scope_Type__c.field-meta.xml
<CustomField>
    <fullName>Scope_Type__c</fullName>
    <label>Scope Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>