force-app/main/default/objects/Security_Audit_Run__c/fields/Scope_Value__c.field-meta.xml
<CustomField>
    <fullName>Scope_Value__c</fullName>
    <label>Scope Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>